# DCA-PPlus

./: .gitignore  CMakeLists.txt
.github/workflows/: ci-github-actions-self-hosted.yaml
applications/analysis/: CMakeLists.txt
applications/cluster_solver_check/: CMakeLists.txt
applications/dca/: CMakeLists.txt  main_dca.cpp
cmake/: dca_config.cmake
include/dca/function/: function.hpp
include/dca/io/json/: json_reader.hpp
include/dca/linalg/: matrix.hpp
include/dca/linalg/util/: atomic_add_cuda.cu.hpp  gpu_event.hpp  util_lapack.hpp
include/dca/math/util/: vector_operations.hpp
include/dca/parallel/no_concurrency/: serial_processor_grouping.hpp
include/dca/util/: message_assert.hpp
src/phys/: CMakeLists.txt
src/phys/parameters/: CMakeLists.txt  main_parameters.cpp
test/test_automation/ci/: run_step.sh
test/unit/io/: json_reader_test.cpp  model_sections_input.json
test/unit/phys/: CMakeLists.txt
test/unit/phys/parameters/: CMakeLists.txt
test/unit/phys/parameters/disorder_parameters/: CMakeLists.txt  disorder_parameters_test.cpp  input_no_disorder.json  input_read_all.json
test/unit/phys/parameters/input_validation/: CMakeLists.txt  input_validation_test.cpp
test/unit/phys/parameters/model_section_check/: CMakeLists.txt  model_section_check_test.cpp
test/unit/phys/parameters/output_parameters/: missing_directory.json  output_parameters_test.cpp
tutorials/tc/: gen_temps.awk  input_sp.json.in  input_tp.json.in
tutorials/tc/preconfigured/: README.md  job.local.analysis_U=6_d=0.95_Nc=4.sh  job.local.dca_U=6_d=0.95_Nc=4.sh
(+79 files in other folders)
