add_subdirectory(analysis_parameters)
add_subdirectory(dca_parameters)
if(DCA_WITH_DISORDER AND NOT DCA_WITH_CUDA AND NOT DCA_WITH_HIP)
  add_subdirectory(disorder_parameters)
endif()
add_subdirectory(domains_parameters)
add_subdirectory(double_counting_parameters)
add_subdirectory(ed_solver_parameters)
add_subdirectory(four_point_parameters)
add_subdirectory(mc_solver_parameters)
add_subdirectory(mci_parameters)
add_subdirectory(model_parameters)
add_subdirectory(model_section_check)
add_subdirectory(output_parameters)
add_subdirectory(physics_parameters)
